src/test/deca/syntax/valid/created/class13.deca
class A {
	void methA(){
		int b;
		bool c;
	}
}


{}
