src/test/deca/syntax/invalid/created/faux38.deca
class D{
	protected void methA(){
	}
}

{}
